--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,3 +12,6 @@
 @import "partials/header";
 @import "partials/footer";
 @import "partials/homepage";
+@import "partials/contacts";
+@import "partials/histories";
+@import "partials/doctors";
