--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -233,11 +233,11 @@ block main
 		.container.container--dpr
 			h2.h2.ta-center  Наши врачи
 			.doctors__container
-				.doctors__filters
-					a.doctors__filter.active(href="javascript:;" data-cat="all") Все акции
-					a.doctors__filter(href="javascript:;" data-cat="1") Адмиралтейская
-					a.doctors__filter(href="javascript:;" data-cat="3") Политехническая
-					a.doctors__filter(href="javascript:;" data-cat="2") Тех. Институт
+				.doctors__filters.tabs.tabs--center
+					a.doctors__filter.tabs__filter.active(href="javascript:;" data-cat="all") Все акции
+					a.doctors__filter.tabs__filter(href="javascript:;" data-cat="1") Адмиралтейская
+					a.doctors__filter.tabs__filter(href="javascript:;" data-cat="3") Политехническая
+					a.doctors__filter.tabs__filter(href="javascript:;" data-cat="2") Тех. Институт
 			.doctors__slider
 				a.doctors__item(href="" data-cat="1")
 					span.doctors__image.doctors__image--1
