--- a/src/style/partials/homepage.scss
+++ b/src/style/partials/homepage.scss
@@ -234,7 +234,6 @@
 
 ///////////////////////////////////
 .h2 {
-	text-align: center;
 	color: #13070C;
 	font-family: ffc;
 	font-size: 40px;
@@ -521,6 +520,9 @@
 	&__item{
 		background: #ffffff;
 		display: flex !important;
+		&.hidden{
+			display: none !important;
+		}
 	}
 	&__left{
 		width: 700px;
@@ -570,6 +572,16 @@
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
+	}
+	&__more{
+		font-size: 16px;
+		text-decoration-line: underline;
+		color: #C31D1F;
+		margin-top: 48px;
+		display: inline-block;
+		&:hover{
+			text-decoration: none;
+		}
 	}
 }
 
@@ -712,78 +724,7 @@
 	&__container{
 		margin-top: 48px;
 	}
-	&__filters{
-		display: flex;
-		justify-content: center;
-	}
-	&__filter{
-		font-size: 16px;
-		display: flex;
-		align-items: center;
-		color: #FFFFFF;
-		padding: 10px 50px 10px 16px;
-		margin: 0 12px;
-		border-radius: 7px;
-		transition: 0.3s;
-		opacity: 0.3;
-		position: relative;
 
-		&::before{
-			content: "";
-			display: block;
-			width: 18px;
-			height: 18px;
-			background: #ffffff;
-			border-radius: 50%;
-			position: absolute;
-			right: 16px;
-			top: 50%;
-			transform: translateY(-50%);
-			z-index: 1;
-		}
-
-		&::after{
-			content: "";
-			display: block;
-			width: 18px;
-			height: 18px;
-			background: #C31D1F;
-			border-radius: 50%;
-			position: absolute;
-			right: 16px;
-			top: 50%;
-			transform: translateY(-50%) scale(0);
-			z-index: 1;
-			transition: 0.3s;
-		}
-
-		&:hover{
-			opacity: 1;
-		}
-		&.active{
-			opacity: 1;
-			&::after{
-				transform: translateY(-50%) scale(0.33);
-			}
-		}
-
-		&:nth-child(1){
-			background-color: #C31D1F;
-			&::after{background-color: #C31D1F;}
-		}
-		&:nth-child(2){
-			background-color: #6C2A81;
-			&::after{background-color: #6C2A81;}
-		}
-		&:nth-child(3){
-			background-color: #E01A4D;
-			&::after{background-color: #E01A4D;}
-		}
-		&:nth-child(4){
-			background-color: #1B73B2;
-			&::after{background-color: #1B73B2;}
-		}
-	}
 	&__slider{
 		margin-left: -16px;
 		margin-right: -16px;
@@ -1164,9 +1105,6 @@
 	&__content{
 		display: none;
 		padding: 24px 0;
-		&.showed{
-			display: block;
-		}
 	}
 	&__address{
 		font-weight: 500;
@@ -1187,11 +1125,6 @@
 		color: #13070C;
 		column-count: 2;
 		margin-top: 16px;
-		&.column{
-			column-count: 1;
-			font-size: 20px;
-			line-height: 180%;
-		}
 	}
 	&__email{
 		margin-top: 16px;
@@ -1211,5 +1144,8 @@
 		font-size: 16px;
 		line-height: 150%;
 		color: #13070C;
+	}
+	&__btn{
+		margin-top: 50px;
 	}
 }
