--- a/src/style/partials/doctors.scss
+++ b/src/style/partials/doctors.scss
@@ -10,9 +10,70 @@
         padding: 0 16px;
         margin-bottom: 32px;
         width: 20%;
+        flex: 0 0 20%;
         box-sizing: border-box;
         &.hidden{
             display: none !important;
+        }
+    }
+}
+
+
+.serts-page{
+    &__content{
+        margin-top: 40px;
+    }
+    &__block{
+        &+ .serts-page__block{
+            margin-top: 64px;
+        }
+    }
+    &__doctor{
+        display: flex;
+        align-items: center;
+        padding-bottom: 16px;
+        border-bottom: 1px solid #C9C1C4;
+    }
+    &__avatar{
+        width: 80px;
+        height: 80px;
+        object-fit: cover;
+        margin-right: 24px;
+        display: block;
+        border-radius: 50%;
+    }
+    &__name{
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 135%;
+        color: #13070C;
+    }
+    &__items{
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -16px;
+        margin-right: -16px;
+    }
+    &__item{
+        width: 20%;
+        flex: 0 0 20%;
+        padding: 0 16px;
+        margin-top: 32px;
+        box-sizing: border-box;
+        a{
+            display: block;
+            width: 100%;
+            padding-bottom: 100%;
+            position: relative;
+            img{
+                display: block;
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
     }
 }
