--- a/src/style/partials/fonts.css
+++ b/src/style/partials/fonts.css
@@ -45,6 +45,24 @@
 
 @font-face {
     font-family: 'Gilroy';
+    src: url('../fonts/Gilroy-LightItalic.woff2') format('woff2'),
+        url('../fonts/Gilroy-LightItalic.woff') format('woff');
+    font-weight: 300;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Gilroy';
+    src: url('../fonts/Gilroy-RegularItalic.woff2') format('woff2'),
+        url('../fonts/Gilroy-RegularItalic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Gilroy';
     src: url('../fonts/Gilroy-BoldItalic.woff2') format('woff2'),
         url('../fonts/Gilroy-BoldItalic.woff') format('woff');
     font-weight: bold;
