--- a/src/style/partials/homepage.scss
+++ b/src/style/partials/homepage.scss
@@ -239,7 +239,7 @@
 	font-size: 40px;
 	font-weight: 300;
 	line-height: 125%;
-	letter-spacing: 1.7px;
+	//letter-spacing: 1.7px;
 
 	@include _600 {
 		font-size: 30px;
