--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -15,3 +15,5 @@
 @import "partials/contacts";
 @import "partials/histories";
 @import "partials/doctors";
+@import "partials/reviews";
+@import "partials/prices";
