--- a/src/views/doctor.pug
+++ b/src/views/doctor.pug
@@ -12,7 +12,7 @@ block vars
 block main
     .doctor-page.dp
         section.dp__first
-            .container.container--dpr
+            .container.container--mini
                 include partials/_breadcrumbs
                 .dp__doctor
                     .dp__avatar
@@ -32,7 +32,7 @@ block main
                             a(href="") Удаление зубов
 
         section.s-pad--top.dp__exp.exp
-            .container.container--dpr
+            .container.container--mini
                 h2.h2  Профессиональный опыт
                 .exp__items
                     .exp__item
@@ -58,7 +58,7 @@ block main
                             p Работаю в клинике Астря, управляя дружной командой врачей стараюсь направить все известные современные методики восстановления зубов для достижения эстетических и функциональных результатов.
 
         section.s-pad--top.dp__serts.sets
-            .container.container--dpr
+            .container.container--mini
                 h2.h2  Сертификаты и свидетельства – 17
                 .serts__items
                     .serts__block
@@ -101,7 +101,7 @@ block main
 
 
         section.s-pad--top.dp__histories.histories
-            .container.container--dpr
+            .container.container--mini
                 h2.h2  Профессиональное портфолио
                 .history__container
                     .history__slider
@@ -134,7 +134,7 @@ block main
 
 
         section.s-pad--top.s-pad--bottom.dp__reviews.dreviews
-            .container.container--dpr
+            .container.container--mini
                 h2.h2  Отзывы пациентов – 14
                 .dreviews__items
                     - var n = 0;
