--- a/src/views/prices.pug
+++ b/src/views/prices.pug
@@ -23,7 +23,52 @@ block main
                     while n < 6
                         - n++
                         .sub-accordion__title.prices__title Общие услуги
-                        .sub-accordion__content
+                        .sub-accordion__content.prices__content
+                            .prices__table
+                                .prices__row
+                                    .prices__cell 1
+                                    .prices__cell Расширенная консультация имплантолога
+                                    .prices__cell 1000 руб.
+                                .prices__row
+                                    .prices__cell 1
+                                    .prices__cell Расширенная консультация имплантолога
+                                    .prices__cell 1000 руб.
+                                .prices__row
+                                    .prices__cell 1
+                                    .prices__cell Расширенная консультация имплантолога
+                                    .prices__cell 1000 руб.
+        .accordion
+            .accordion__title.accordion__title--2 Цены на услуги м. Технологический институт
+            .accordion__content.prices
+                .sub-accordion
+                    - var n = 0;
+                    while n < 6
+                        - n++
+                        .sub-accordion__title.prices__title Общие услуги
+                        .sub-accordion__content.prices__content
+                            .prices__table
+                                .prices__row
+                                    .prices__cell 1
+                                    .prices__cell Расширенная консультация имплантолога
+                                    .prices__cell 1000 руб.
+                                .prices__row
+                                    .prices__cell 1
+                                    .prices__cell Расширенная консультация имплантолога
+                                    .prices__cell 1000 руб.
+                                .prices__row
+                                    .prices__cell 1
+                                    .prices__cell Расширенная консультация имплантолога
+                                    .prices__cell 1000 руб.
+
+        .accordion
+            .accordion__title.accordion__title--3 Цены на услуги м. Политехническая
+            .accordion__content.prices
+                .sub-accordion
+                    - var n = 0;
+                    while n < 6
+                        - n++
+                        .sub-accordion__title.prices__title Общие услуги
+                        .sub-accordion__content.prices__content
                             .prices__table
                                 .prices__row
                                     .prices__cell 1
