--- a/src/views/reviews.pug
+++ b/src/views/reviews.pug
@@ -10,7 +10,7 @@ block vars
 
 
 block main
-    .container.container--dpr.page__pad
+    .container.container--mini.page__pad
         h1.h2.page__title Отзывы
 
         include partials/_breadcrumbs
