--- a/src/style/partials/homepage.scss
+++ b/src/style/partials/homepage.scss
@@ -235,7 +235,7 @@
 ///////////////////////////////////
 .h2 {
 	color: #13070C;
-	font-family: ffc;
+	font-family: $ffc;
 	font-size: 40px;
 	font-weight: 300;
 	line-height: 125%;
