--- a/src/style/partials/main.scss
+++ b/src/style/partials/main.scss
@@ -242,3 +242,13 @@ body {
 .hidden{
 	display: none !important;
 }
+
+.mt20{
+	margin-top: 20px;
+}
+.mt10{
+	margin-top: 10px;
+}
+.mt5{
+	margin-top: 5px;
+}
